objects/ZPF_UIP_Contact__c.object
<CustomObject><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ZPF UIP Contacts</relationshipLabel>
        <relationshipName>ZPF_UIP_Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Mailing_State_Province__c</fullName>
        <label>Mailing State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Mailing_Zip_Postal_Code__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Public_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Facing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>School_District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School/District</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ZPF UIP Contacts</relationshipLabel>
        <relationshipName>ZPF_UIP_Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>UIP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIP</label>
        <referenceTo>ZPIF_UIP__c</referenceTo>
        <relationshipLabel>ZPF UIP Contacts</relationshipLabel>
        <relationshipName>ZPF_UIP_Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ZPIF_UIP_Identidier__c</fullName>
        <label>ZPIF UIP Identidier</label>
        <length>50</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Junction object between UIP and contacts for Section II of the UIP.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>ZPF UIP Contact</label><nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>UIP Contact Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>ZPF UIP Contacts</pluralLabel><sharingModel>Private</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>District_UIP_2017</fullName>
        <active>true</active>
        <label>District UIP 2017</label>
    </recordTypes></CustomObject>